<resources>
    <string name="app_name">Lab1PDMA017006</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_alumno">Alumno</string>
    <string name="nav_deducciones">Deducciones de ley</string>
    <string name="menu_alumno">Alumno</string>
    <string name="menu_deducciones">Deducciones de ley</string>
    <string name="alumno_acept_btn">Aceptar</string>
    <string name="label_nombre_alumno">Nombre del alumno</string>
    <string name="label_carnet_de_alumno">Carnet de alumno</string>
</resources>