<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.lab1pdma017006.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <!--fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.lab1pdma017006.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.lab1pdma017006.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" /-->
    <fragment
        android:id="@+id/nav_alumno"
        android:name="com.example.lab1pdma017006.ui.alumno.AlumnoFragment"
        android:label="@string/menu_alumno"
        tools:layout="@layout/alumno_fragment" />
    <fragment
        android:id="@+id/nav_deducciones"
        android:name="com.example.lab1pdma017006.ui.deducciones.DeduccionesFragment"
        android:label="@string/menu_deducciones"
        tools:layout="@layout/deducciones_fragment" />
</navigation>