<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.alumno.AlumnoFragment">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/label_nombre_alumno"
            app:layout_constraintBottom_toTopOf="@+id/editTextNombre"
            app:layout_constraintEnd_toEndOf="@+id/editTextNombre"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextNombre" />

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/label_nombre_alumno"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.186" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/label_carnet_de_alumno"
            app:layout_constraintBottom_toTopOf="@+id/editTextCarnet"
            app:layout_constraintEnd_toEndOf="@+id/editTextCarnet"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextCarnet" />

        <EditText
            android:id="@+id/editTextCarnet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:ems="10"
            android:hint="@string/label_carnet_de_alumno"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/editTextNombre"
            app:layout_constraintStart_toStartOf="@+id/editTextNombre"
            app:layout_constraintTop_toBottomOf="@+id/editTextNombre" />

        <Button
            android:id="@+id/acept_alumno_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="136dp"
            android:text="@string/alumno_acept_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCarnet" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>